--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaki",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "The developers search tool ",
   "main": "./bin/kaki.js",
   "repository": {
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "fs-extra": "^0.29.0"
+    "commander": "^2.9.0"
   },
   "keywords": [
     "grep",
