--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaki",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "The developers search tool ",
   "main": "./bin/kaki.js",
   "repository": {
@@ -18,6 +18,7 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "chalk": "^1.1.3",
     "commander": "^2.9.0"
   },
