--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "kaki",
-  "version": "1.3.6",
-  "description": "The developers search tool",
-  "main": "./bin/kaki.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/FelipeBB/kaki.git"
-  },
-  "bin": {
-    "kaki": "./bin/kaki.js"
-  },
-  "scripts": {
-    "test": "mocha test"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5"
-  },
-  "dependencies": {
-    "async": "^1.5.2",
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "ora": "^0.2.1"
-  },
-  "keywords": [
-    "grep",
-    "search",
-    "tool"
-  ],
-  "author": "Felipe Beline Baravieira <fe.belineb@gmail.com>",
-  "license": "MIT"
+    "name": "kaki",
+    "version": "1.3.7",
+    "description": "Search tool designed for developers",
+    "main": "./bin/kaki.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/FelipeBB/kaki.git"
+    },
+    "bin": {
+        "kaki": "./bin/kaki.js"
+    },
+    "scripts": {
+        "test": "mocha test"
+    },
+    "devDependencies": {
+        "chai": "^3.5.0",
+        "mocha": "^2.4.5"
+    },
+    "dependencies": {
+        "async": "^1.5.2",
+        "chalk": "^1.1.3",
+        "commander": "^2.9.0",
+        "ora": "^0.2.1"
+    },
+    "keywords": [
+        "grep",
+        "search",
+        "find",
+        "tool",
+        "beyond grep"
+    ],
+    "author": "Felipe Beline Baravieira <fe.belineb@gmail.com>",
+    "license": "MIT"
 }
