--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "mocha": "^2.4.5"
     },
     "dependencies": {
-        "async": "^1.5.2",
         "chalk": "^1.1.3",
         "commander": "^2.9.0",
+    		"microasync": "^1.0.3",
         "ora": "^0.2.1"
     },
     "keywords": [
