--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-    "name": "kaki",
-    "version": "1.6.7",
-    "description": "Search tool designed for developers",
-    "main": "./bin/kaki.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/FelipeBB/kaki.git"
-    },
-    "bin": {
-        "kaki": "./bin/kaki.js"
-    },
-    "scripts": {
-        "test": "mocha test"
-    },
-    "devDependencies": {
-        "chai": "^3.5.0",
-        "mocha": "^2.4.5"
-    },
-    "dependencies": {
-        "chalk": "^1.1.3",
-        "commander": "^2.9.0",
-        "microasync": "^1.0.3",
-        "ora": "^0.2.1"
-    },
-    "keywords": [
-        "grep",
-        "search",
-        "find",
-        "tool",
-        "beyond grep"
-    ],
-    "author": "Felipe Beline Baravieira <fe.belineb@gmail.com>",
-    "license": "MIT"
+  "name": "kaki",
+  "version": "1.6.7",
+  "description": "Search tool designed for developers",
+  "main": "./bin/kaki.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FelipeBB/kaki.git"
+  },
+  "bin": {
+    "kaki": "./bin/kaki.js"
+  },
+  "scripts": {
+    "test": "mocha test",
+    "coverage": "istanbul cover _mocha -- -R spec"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0",
+    "microasync": "^1.0.3",
+    "ora": "^0.2.1"
+  },
+  "keywords": [
+    "grep",
+    "search",
+    "find",
+    "tool",
+    "beyond grep"
+  ],
+  "author": "Felipe Beline Baravieira <fe.belineb@gmail.com>",
+  "license": "MIT"
 }
